--- a/SunMoon.html
+++ b/SunMoon.html
@@ -22,7 +22,7 @@
         </div>
         <!--音乐区域结束-->
         <div class="swiper-wrapper">
-            <!--<div class="swiper-slide one"></div>-->
+            <div class="swiper-slide one"></div>
             <div class="swiper-slide two">
                 <img src="img/myPhoto.png" class="photo ani"  swiper-animate-effect="fadeInDownBig" swiper-animate-duration='1s' swiper-animate-delay="1s" />
                 <img src="img/school.png" class="school ani"  swiper-animate-effect="zoomIn" swiper-animate-duration='1s' swiper-animate-delay="2.5s" />
